# record_store

./: README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/data/: records.json
alembic/versions/: 2cf15cc1ce3f_init.py  50007b57635c_.py  6a635ef4fbc6_.py  85346db2b822_.py  92945c0902ea_.py  a639c7a44f25_deleting_tracksid_from_albums.py  cc17310014ab_restructure_the_foreignkeys.py  cddcbf7088a5_.py
api/: album_route.py  authentication.py  records_routes.py  shoping_card_routes.py  tracks_route.py  user_routes.py
api/utils/: album_utils.py  auth_utils.py  jwt.py  records_utils.py  shoping_card_utils.py  tracks_utils.py  user_utils.py
data/: __init__.py  db_engine.py
data/models/: card.py  records.py  user.py
schema/: albums_schema.py  jwt.py  records_schema.py  shopin_card_schema.py  tracks_schema.py  user_schema.py
