[tool.poetry]
name = "record-store"
version = "0.1.0"
description = "building a record store with fastAPI"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.31"
uvicorn = "^0.30.1"
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
bcrypt = "^4.1.3"
greenlet = "^3.0.3"
pyjwt = "^2.8.0"
passlib = {extras = ["bycript"], version = "^1.7.4"}
types-passlib = "^1.7.7.20240327"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
